# logicpearl

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATASETS.md  LICENSE  NOTICES.md  QUALITY.json  README.md  ROADMAP.md  SCORES.json  SECURITY.md  TERMINOLOGY.md  deny.toml  install.sh  pnpm-lock.yaml  rust-toolchain.toml
.githooks/: pre-commit  pre-push
crates/logicpearl/: Cargo.toml  build.rs
crates/logicpearl-benchmark/: Cargo.toml
crates/logicpearl-benchmark/profiles/: alert.yaml  chatgpt-jailbreak-prompts.yaml  jailbreakbench.yaml  pint.yaml  salad-attack-enhanced-set.yaml  squad.yaml
crates/logicpearl-benchmark/src/: case_io.rs  configured.rs  detection.rs  lib.rs  mt_agentrisk.rs  parsers.rs  profiles.rs  projection.rs  tests.rs  types.rs  waf.rs
crates/logicpearl-benchmark/src/waf/: classification.rs  http.rs
crates/logicpearl-build/: Cargo.toml
crates/logicpearl-build/src/: lib.rs
crates/logicpearl-cli/: Cargo.toml
crates/logicpearl-cli/src/: artifact_cmd.rs  basic_cmd.rs  benchmark_cmd.rs  conformance_cmd.rs  main.rs  observer_cmd.rs  pipeline_cmd.rs  refresh_cmd.rs
crates/logicpearl-cli/tests/: e2e_benchmark_heldout.rs  e2e_demos.rs  e2e_getting_started.rs  e2e_waf_edge.rs
crates/logicpearl-conformance/: Cargo.toml
crates/logicpearl-conformance/src/: lib.rs
crates/logicpearl-core/: Cargo.toml
crates/logicpearl-core/src/: lib.rs
crates/logicpearl-discovery/: Cargo.toml
crates/logicpearl-discovery/fixtures/regression/: balanced_preserves_zero_fp_exact_policies.csv  broad_signal_beats_narrow_fragments.csv  imbalanced_prior_rejects_baseline_only_rules.csv  recall_biased_accepts_controlled_false_positives.csv  shared_prefix_shards_collapse_to_prefix.csv
crates/logicpearl-discovery/src/: canonicalize.rs  engine.rs  features.rs  lib.rs  proposals.rs  rule_text.rs  tests.rs  trace_loading.rs
crates/logicpearl-discovery/src/engine/: bottom_up.rs  candidates.rs  generalization.rs  residual_recovery.rs  rule_hygiene.rs  rule_limit.rs  scoring.rs  selection.rs  simplification.rs  tests.rs  validation.rs
crates/logicpearl-engine/: Cargo.toml  README.md
crates/logicpearl-engine/src/: lib.rs
crates/logicpearl-ir/: Cargo.toml
crates/logicpearl-ir/src/: lib.rs
crates/logicpearl-observer/: Cargo.toml
crates/logicpearl-observer-synthesis/: Cargo.toml
crates/logicpearl-observer-synthesis/src/: bootstrap.rs  candidate_generation.rs  lib.rs  repair.rs  scoring.rs  selection.rs  signal_profiles.rs  synthesis.rs
crates/logicpearl-observer/src/: lib.rs
crates/logicpearl-pipeline/: Cargo.toml
crates/logicpearl-pipeline/src/: compose.rs  fanout_pipeline.rs  json_path.rs  lib.rs  override_pipeline.rs  path.rs  staged.rs  tests.rs
crates/logicpearl-plugin/: Cargo.toml
crates/logicpearl-plugin/src/: contract.rs  lib.rs  manifest.rs  process_runner.rs  provenance.rs  schema_subset.rs  tests.rs  types.rs
crates/logicpearl-render/: Cargo.toml
crates/logicpearl-render/src/: lib.rs
crates/logicpearl-runtime/: Cargo.toml
crates/logicpearl-runtime/benches/: evaluate.rs
crates/logicpearl-runtime/src/: lib.rs
crates/logicpearl-solver/: Cargo.toml
crates/logicpearl-solver/src/: backend.rs  lib.rs  parse.rs  pool.rs
crates/logicpearl-verify/: Cargo.toml
crates/logicpearl-verify/src/: lib.rs
crates/logicpearl/src/: artifact_cmd.rs  basic_cmd.rs  benchmark_cmd.rs  coaching.rs  conformance_cmd.rs  diff_cmd.rs  main.rs  observer_cmd.rs  pipeline_cmd.rs  plugin_cmd.rs  refresh_cmd.rs  trace_cmd.rs
crates/logicpearl/tests/: e2e_action_priority.rs  e2e_agent_guardrail.rs  e2e_artifact_entrypoints.rs  e2e_artifact_manifest.rs  e2e_benchmark_heldout.rs  e2e_build_provenance.rs  e2e_build_summary.rs  e2e_demos.rs  e2e_doctor.rs  e2e_error_coaching.rs  e2e_fanout.rs  e2e_feature_dictionary.rs  e2e_getting_started.rs  e2e_golden_examples.rs  e2e_healthcare_contracts.rs  e2e_package.rs  e2e_pipeline_surface.rs  e2e_plugins.rs  e2e_revenue_recovery_contracts.rs  e2e_review_loop.rs  e2e_runtime_schemas.rs  e2e_selection_policy.rs  e2e_stdin.rs  e2e_traces.rs  e2e_waf_edge.rs
discovery/: README.md  pyproject.toml
discovery/src/logicpearl/: __init__.py  build_pearl_cli.py  cli.py  paths.py
discovery/tests/: test_bitmask_render.py  test_build_pearl_cli.py  test_claims_domain.py  test_domains_opa_parser.py  test_engine_boolean_mining.py  test_engine_feature_governance.py  test_engine_gate_ir.py  test_engine_layering.py  test_engine_pipeline_adapters.py  test_engine_rule_pruning.py  test_engine_trace_quality.py  test_healthcare_policy_assembly.py  test_healthcare_policy_audit.py  test_healthcare_policy_cluster_mapping.py  test_healthcare_policy_compiler.py  test_healthcare_policy_corpus.py  test_healthcare_policy_corpus_runtime.py  test_healthcare_policy_curation.py  test_healthcare_policy_deployment.py  test_healthcare_policy_finalization.py  test_healthcare_policy_mapping_validation.py  test_healthcare_policy_presentation.py  test_healthcare_policy_request_eval.py  test_healthcare_policy_requirements.py  test_healthcare_policy_review.py  test_healthcare_policy_samples.py  test_healthcare_policy_sections.py  test_healthcare_policy_selector_and_request_pearl.py  test_healthcare_policy_slice_candidates.py  test_healthcare_policy_slice_family_ranking.py  test_heatmap_render.py  test_html_render.py  test_ir_loaders.py  test_ir_parity_cases.py  test_observer_loaders.py  test_observer_runner.py  test_observer_validation.py
reserved-crates/logicpearl-explain/: Cargo.toml
reserved-crates/logicpearl-explain/src/: lib.rs
reserved-crates/logicpearl-policy/: Cargo.toml
reserved-crates/logicpearl-policy/src/: lib.rs
reserved-crates/logicpearl-wasm/: Cargo.toml
reserved-crates/logicpearl-wasm/src/: lib.rs
reserved-python/logicpearl/: Cargo.toml  README.md  pyproject.toml
reserved-python/logicpearl/rust-src/: lib.rs
xtask/: Cargo.toml
xtask/src/: clean_cmd.rs  compare_cmd.rs  main.rs  refresh_cmd.rs  verify_cmd.rs
xtask/src/refresh_cmd/: commands.rs  io.rs  progress.rs  quality.rs
(+420 files in other folders)
