[workspace]
members = [
  "crates/logicpearl-cli",
  "crates/logicpearl-benchmark",
  "crates/logicpearl-core",
  "crates/logicpearl-ir",
  "crates/logicpearl-runtime",
  "crates/logicpearl-discovery",
  "crates/logicpearl-observer",
  "crates/logicpearl-observer-synthesis",
  "crates/logicpearl-plugin",
  "crates/logicpearl-pipeline",
  "crates/logicpearl-verify",
  "crates/logicpearl-render",
  "crates/logicpearl-conformance",
]
default-members = ["crates/logicpearl-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
miette = { version = "7.4", features = ["fancy"] }
owo-colors = "4.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
