[workspace]
members = [
  "crates/logicpearl",
  "crates/logicpearl-solver",
  "crates/logicpearl-engine",
  "crates/logicpearl-benchmark",
  "crates/logicpearl-core",
  "crates/logicpearl-ir",
  "crates/logicpearl-runtime",
  "crates/logicpearl-discovery",
  "crates/logicpearl-observer",
  "crates/logicpearl-observer-synthesis",
  "crates/logicpearl-plugin",
  "crates/logicpearl-pipeline",
  "crates/logicpearl-verify",
  "crates/logicpearl-render",
  "crates/logicpearl-conformance",
  "xtask",
]
default-members = ["crates/logicpearl"]
exclude = [
  "reserved-crates/logicpearl-explain",
  "reserved-crates/logicpearl-policy",
  "reserved-crates/logicpearl-schema",
  "reserved-crates/logicpearl-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.5"
license = "MIT"
homepage = "https://logicpearl.com"
repository = "https://github.com/LogicPearlHQ/logicpearl"

[workspace.dependencies]
anstream = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
good_lp = { version = "1.15.1", default-features = false, features = ["microlp"] }
hex = "0.4"
indicatif = "0.17"
miette = { version = "7.4", features = ["fancy"] }
owo-colors = { version = "4.1", features = ["supports-colors"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
logicpearl-benchmark = { version = "0.1.5", path = "crates/logicpearl-benchmark" }
logicpearl-conformance = { version = "0.1.5", path = "crates/logicpearl-conformance" }
logicpearl-core = { version = "0.1.5", path = "crates/logicpearl-core" }
logicpearl-discovery = { version = "0.1.5", path = "crates/logicpearl-discovery" }
logicpearl-engine = { version = "0.1.5", path = "crates/logicpearl-engine" }
logicpearl-ir = { version = "0.1.5", path = "crates/logicpearl-ir" }
logicpearl-observer = { version = "0.1.5", path = "crates/logicpearl-observer" }
logicpearl-observer-synthesis = { version = "0.1.5", path = "crates/logicpearl-observer-synthesis" }
logicpearl-pipeline = { version = "0.1.5", path = "crates/logicpearl-pipeline" }
logicpearl-plugin = { version = "0.1.5", path = "crates/logicpearl-plugin" }
logicpearl-render = { version = "0.1.5", path = "crates/logicpearl-render" }
logicpearl-runtime = { version = "0.1.5", path = "crates/logicpearl-runtime" }
logicpearl-solver = { version = "0.1.5", path = "crates/logicpearl-solver" }
logicpearl-verify = { version = "0.1.5", path = "crates/logicpearl-verify" }
