[project]
name = "logicpearl-discovery"
version = "0.1.0"
description = "Discovery and IR tooling for LogicPearl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.12,<3",
  "pypdf>=4.2,<6",
  "scikit-learn>=1.5,<2",
]

[project.scripts]
logicpearl-discovery = "logicpearl.cli:main"
logicpearl-build-pearl = "logicpearl.build_pearl_cli:main"
logicpearl-observe = "logicpearl.observer.cli:main"
logicpearl-validate-observer = "logicpearl.observer.validate_cli:main"
logicpearl-render-bitmask = "logicpearl.render.cli:main"
logicpearl-claims-audit = "logicpearl.domains.claims.cli:main"
logicpearl-opa-inspect = "logicpearl.domains.opa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/logicpearl"]
