[package]
name = "logicpearl-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Benchmark case adapters and scoring helpers for LogicPearl."

[dependencies]
logicpearl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
