[package]
name = "logicpearl-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logicpearl-core = { path = "../logicpearl-core" }
logicpearl-ir = { path = "../logicpearl-ir" }
logicpearl-runtime = { path = "../logicpearl-runtime" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
