[package]
name = "logicpearl-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
logicpearl-core = { path = "../logicpearl-core" }
logicpearl-ir = { path = "../logicpearl-ir" }
logicpearl-runtime = { path = "../logicpearl-runtime" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
