[package]
name = "logicpearl-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Conformance receipts, manifests, and runtime parity checks for LogicPearl."

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
logicpearl-runtime.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
