[package]
name = "logicpearl-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Artifact discovery and rule recovery from labeled LogicPearl decision traces."

[dependencies]
csv.workspace = true
good_lp.workspace = true
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
logicpearl-runtime.workspace = true
logicpearl-solver.workspace = true
logicpearl-verify.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
