[package]
name = "logicpearl-observer-synthesis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logicpearl-benchmark = { path = "../logicpearl-benchmark" }
logicpearl-core = { path = "../logicpearl-core" }
logicpearl-observer = { path = "../logicpearl-observer" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
