[package]
name = "logicpearl-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logicpearl-core = { path = "../logicpearl-core" }
logicpearl-ir = { path = "../logicpearl-ir" }
logicpearl-plugin = { path = "../logicpearl-plugin" }
logicpearl-runtime = { path = "../logicpearl-runtime" }
serde.workspace = true
serde_json.workspace = true
