[package]
name = "logicpearl-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "String-of-pearls pipeline artifacts and execution for LogicPearl."

[dependencies]
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
logicpearl-plugin.workspace = true
logicpearl-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
