[package]
name = "logicpearl-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Plugin manifest and stage contracts for LogicPearl integrations."

[dependencies]
logicpearl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
