[package]
name = "logicpearl-render"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rendering helpers for LogicPearl artifacts and verification status."

[dependencies]
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
owo-colors.workspace = true
