[package]
name = "logicpearl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deterministic runtime evaluator for LogicPearl artifacts."

[dependencies]
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
serde_json.workspace = true
