[package]
name = "logicpearl-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Solver-backed verification helpers for LogicPearl discovery and conformance."

[dependencies]
logicpearl-core.workspace = true
logicpearl-ir.workspace = true
logicpearl-solver.workspace = true
serde.workspace = true
serde_json.workspace = true
