[package]
name = "logicpearl"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust-first CLI for building, inspecting, and running LogicPearl artifacts."

[dependencies]
anstream.workspace = true
clap.workspace = true
clap_complete.workspace = true
csv.workspace = true
hex.workspace = true
indicatif.workspace = true
logicpearl-benchmark.workspace = true
logicpearl-conformance = { workspace = true, optional = true }
logicpearl-core.workspace = true
logicpearl-discovery.workspace = true
logicpearl-ir.workspace = true
logicpearl-observer.workspace = true
logicpearl-observer-synthesis.workspace = true
logicpearl-plugin.workspace = true
logicpearl-pipeline.workspace = true
logicpearl-render.workspace = true
logicpearl-runtime.workspace = true
logicpearl-verify.workspace = true
miette.workspace = true
owo-colors.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[features]
default = ["conformance"]
conformance = ["dep:logicpearl-conformance"]

[dev-dependencies]
jsonschema.workspace = true
tempfile.workspace = true

[[bin]]
name = "logicpearl"
path = "src/main.rs"
