[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logicpearl"
version = "0.0.1"
description = "Reserved package name for the LogicPearl project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "LogicPearl" }
]
keywords = ["logicpearl", "rules", "policy", "decisioning"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://logicpearl.com"
Repository = "https://github.com/LogicPearlHQ/logicpearl"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
